2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 19
	Coverity Id 20
	Coverity Id 21
	* libfs/src/imfs/imfs_link.c, libfs/src/imfs/imfs_load_tar.c,
	libfs/src/imfs/imfs_mknod.c: Add comment to explain allocation is
	for life of file, not scope of method.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 12
	Coverity Id 13
	Coverity Id 14
	Coverity Id 15
	* libmisc/stackchk/check.c: Rewrote loop to avoid possible buffer
	overruns when the pattern area size is not a multiple of 16.  There
	were no current ports impacted by this but better to be safe.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 22
	* libfs/src/imfs/imfs_symlink.c: Add comment to explain why this
	is not a resource leak.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/imfs/imfs_symlink.c: Spacing.

2009-12-28	Shrikant Gaikwad <n3oo3n@gmail.com>

	* cpukit/libfs/src/pipe/pipe.c Restructured code to remove the
	goto statements.

2009-12-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libnetworking/lib/ftpfs.c: Use EINVAL not EBADRQC.

2009-12-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/login_prompt.c: Switch from non-canonical mode with
	timeout (Case C) to blocking IO waiting for single character on
	login. In Case C mode, you cannot tell EOF from no data available.
	This means we cannot tell when a telnet connection is dropped. This
	was changed from 4.9 and resulted in breakage.

2009-12-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1474
	* libblock/include/rtems/diskdevs.h, libblock/src/bdbuf.c,
	libblock/src/blkdev.c: Pass only physical disc devices to the block
	device driver.  Reject direct usage of RTEMS_BLKIO_REQUEST though an
	IO control.  Renamed and removed disk device structure access methods.
	* libblock/src/flashdisk.c, libblock/src/nvdisk.c,
	libblock/src/ramdisk-driver.c: Update for block device API change.

2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>
