@@ -7,7 +7,7 @@
  *  at system shutdown unless special arrangements to copy the data to
  *  some type of non-volailte storage are made by the application.
  *
- *  COPYRIGHT (c) 1989-1999.
+ *  COPYRIGHT (c) 1989-2010.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be
@@ -399,14 +399,16 @@ MEMFILE_STATIC int IMFS_memfile_remove_block(
    unsigned int   block
 )
 {
-  block_p *block_entry_ptr;
+  block_p *block_ptr;
   block_p  ptr;
 
-  block_entry_ptr = IMFS_memfile_get_block_pointer( the_jnode, block, 0 );
-  ptr = *block_entry_ptr;
-  *block_entry_ptr = 0;
-
-  memfile_free_block( ptr );
+  block_ptr = IMFS_memfile_get_block_pointer( the_jnode, block, 0 );
+  assert( block_ptr );
+  if ( block_ptr ) {
+    ptr = *block_ptr;
+    *block_ptr = 0;
+    memfile_free_block( ptr );
+  }
 
   return 1;
 }
