@@ -1,5 +1,10 @@
 2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	Coverity Id 12
+	* libfs/src/imfs/memfile.c: Check for NULL return value.
+
+2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	Coverity Id 19
 	Coverity Id 20
 	Coverity Id 21
